--- a/main.css
+++ b/main.css
@@ -105,3 +105,31 @@ a {
   font-size: 16px;
   line-height: 22.4px;
 }
+
+.hamburger {
+  position: fixed;
+  display: block;
+  padding: 30px;
+  top: 30px;
+  right: 30px;
+}
+.hamburger span {
+  display: inline-block;
+  width: 3px;
+  height: 3px;
+  background-color: #000;
+  border-radius: 50%;
+}
+.hamburger::after, .hamburger::before {
+  content: "";
+  display: inline-block;
+  width: 3px;
+  height: 3px;
+  background-color: #000;
+  border-radius: 50%;
+}
+@media screen and (min-width: 568px) {
+  .hamburger {
+    display: none;
+  }
+}
