--- a/main.css
+++ b/main.css
@@ -104,6 +104,33 @@ a {
   text-transform: capitalize;
   font-size: 16px;
   line-height: 22.4px;
+  display: block;
+}
+@media screen and (max-width: 568px) {
+  .nav_list a {
+    font-size: 42px;
+    padding: 30px 0;
+    border-bottom: 2px solid #eee2e2;
+  }
+}
+@media screen and (max-width: 568px) {
+  .nav_list {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    flex-direction: column;
+    column-gap: 0 px;
+    align-items: center;
+    justify-content: center;
+  }
+  .nav_list li {
+    display: block;
+    width: 100%;
+    text-align: center;
+  }
 }
 
 .hamburger {
