--- a/main.scss
+++ b/main.scss
@@ -109,6 +109,34 @@ a{
         text-transform: capitalize;
         font-size: 16px;
         line-height: 22.4px;
+        display: block;
+
+        @media screen and (max-width: 568px) {
+           font-size: 42px;
+           padding: 30px 0;
+           border-bottom: 2px solid #eee2e2;
+            
+        }
+    }
+
+    @media screen and (max-width: 568px) {
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #fff;
+
+        flex-direction: column;
+        column-gap: 0 px;
+        align-items: center;
+        justify-content: center;
+
+        li {
+            display: block;
+            width: 100%;
+            text-align: center;
+            }
     }
 
 }
@@ -138,7 +166,7 @@ a{
 
     }
 
-    @media  screen and (min-width: 568px) {
+    @media screen and (min-width: 568px) {
         display: none;
         
     }
