add event listener

--- a/main.css
+++ b/main.css
@@ -115,6 +115,7 @@ a {
 }
 @media screen and (max-width: 568px) {
   .nav_list {
+    display: none;
     position: fixed;
     left: 0;
     top: 0;
@@ -139,6 +140,9 @@ a {
   padding: 30px;
   top: 30px;
   right: 30px;
+  background-color: #fff;
+  outline: none;
+  border: none;
 }
 .hamburger span {
   display: inline-block;
